Pexu arkki debug tools

--- a/ribulsk-arse/package.json
+++ b/ribulsk-arse/package.json
@@ -17,7 +17,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@yleisradio/arkki-web": "^8.8.0",
+    "@yleisradio/arkki-web": "file:.yalc/@yleisradio/arkki-web",
+    "@yleisradio/yds-core": "file:.yalc/@yleisradio/yds-core",
     "@yleisradio/yle-design-system": "^0.2.12",
     "axios": "^1.2.2",
     "babel-loader": "^9.1.0",
