--- a/ribulsk-arse/package.json
+++ b/ribulsk-arse/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "BABEL_ENV=server babel-node index.js",
-    "client": "BABEL_ENV=browser webpack"
+    "client": "BABEL_ENV=browser webpack --json webpack-stats.json",
+    "analyze": "BABEL_ENV=browser webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@yleisradio/arkki-web": "file:.yalc/@yleisradio/arkki-web",
     "@yleisradio/yds-core": "file:.yalc/@yleisradio/yds-core",
-    "@yleisradio/yle-design-system": "^0.2.12",
+    "@yleisradio/yds-icons-react": "file:.yalc/@yleisradio/yds-icons-react",
     "axios": "^1.2.2",
     "babel-loader": "^9.1.0",
     "blurhash": "^2.0.4",
@@ -36,6 +37,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10"
+    "@types/react-dom": "^18.0.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-stats-plugin": "^1.1.1"
   }
 }
